# code-wars

./: README.md  bit_counting.py  create_phone_number.py  equal_sides_of_an_array.py  exes_and_ohs.py  persistent_bugger.py  pyproject.toml  your_order_please.py
done/: array.diff.py  calculating_with_functions.py  growth_of_a_population.py  multiples_of_3_or_5.py  replace_with_alphabet_position.py  simple_pig_latin.py  strip_comments.py  who_likes_it.py
